--- a/NginxCacheFileReader/NginxCacheFileReader.csproj
+++ b/NginxCacheFileReader/NginxCacheFileReader.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<Version>1.0.0</Version>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>net9.0</TargetFramework>
+		<TargetFramework>net10.0</TargetFramework>
 		<AssemblyName>nginx-cachefilereader</AssemblyName>
 		<RootNamespace>NginxCacheFileReader</RootNamespace>
 		<ImplicitUsings>enable</ImplicitUsings>
@@ -11,16 +11,16 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="EFCore.NamingConventions" Version="9.0.0" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.10">
+		<PackageReference Include="EFCore.NamingConventions" Version="10.0.0-rc.2" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.0">
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.10" />
-		<PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.10" />
-		<PackageReference Include="SixLabors.ImageSharp" Version="3.1.11" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="10.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.0" />
+		<PackageReference Include="SixLabors.ImageSharp" Version="3.1.12" />
 		<PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="3.0.1" />
-		<PackageReference Include="System.CommandLine" Version="2.0.0-rc.2.25502.107" />
+		<PackageReference Include="System.CommandLine" Version="2.0.0" />
 	</ItemGroup>
 
 </Project>
