--- a/NginxCacheFileReader.Tests/NginxCacheFileReader.Tests.csproj
+++ b/NginxCacheFileReader.Tests/NginxCacheFileReader.Tests.csproj
@@ -19,8 +19,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="NUnit3TestAdapter" Version="6.0.0-beta.1" />
-    <PackageReference Include="Testcontainers" Version="4.8.1" />
+    <PackageReference Include="NUnit3TestAdapter" Version="6.0.1" />
+    <PackageReference Include="Testcontainers" Version="4.9.0" />
   </ItemGroup>
 
   <ItemGroup>
